2006-12-06  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_mkhomedir/pam_mkhomedir.c (rec_mkdir): Fix
	handling of left-most path component [SF#1591598].
	(create_homedir): Mark user visible messages for translation.
	* po/de.po: Adjust german translation for pam_mkhomedir.

	* modules/pam_faildelay/pam_faildelay.c: If no argument is
	given, try to read FAIL_DELAY from /etc/login.defs.
	* modules/pam_faildelay/pam_faildelay.8.xml: Document usage
	of /etc/login.defs.

2006-12-04  Tomas Mraz <t8m@centrun.cz>

	* po/jp.po: Fixed mistake in Password: message (from
	Peng Huang <phuang@redhat.com>).

2006-11-28  Thorsten Kukuk  <kukuk@thkukuk.de>

	* po/hu.po: Update hungarian translation (from
	Kalman Kemenczy <kkemenczy@novell.com>).

	* configure.in: Allow disabling support for cracklib, audit, libdb.

	* modules/pam_faildelay/pam_faildelay.8.xml: Correct name of Author.

	* configure.in: Remove --enable-docdir (obsolete by --docdir).
	* doc/Makefile.am: Don't overwrite htmldir.
	* doc/adg/Makefile.am: Use docdir, htmldir and pdfdir.
	* doc/mwg/Makefile.am: Likewise.
	* doc/sag/Makefile.am: Likewise.
	* doc/specs/Makefile.am: Use docdir.

	* tests/tst-pam_set_data.c: New test cases for pam_set_data().
	* tests/Makefile.am: Add pam_set_data test case.

	* libpam/pam_data.c: Add NULL pointer check for module_data_name.
	* libpam/Makefile.am: Bump revision of shared library.

2006-11-08  Thorsten Kukuk  <kukuk@thkukuk.de>

	* configure.in: Add modules/pam_faildelay/Makefile.
	* doc/sag/Linux-PAM_SAG.xml: Include pam_faildelay.xml.
	* doc/sag/pam_faildelay.xml: New.
	* libpam/pam_static_modules.h: Include static pam_faildelay data.
	* modules/Makefile.am: Add pam_faildelay directory.
	* modules/pam_faildelay/Makefile.am: New.
	* modules/pam_faildelay/README: New, generated from XML file.
	* modules/pam_faildelay/README.xml: New.
	* modules/pam_faildelay/pam_faildelay.8: New, generated from xml.
	* modules/pam_faildelay/pam_faildelay.8.xml: New.