@@ -1,3 +1,8 @@
+2006-12-09  Thorsten Kukuk  <kukuk@thkukuk.de>
+
+	* modules/pam_umask/pam_umask.c: Use strtoul instead of strtol,
+	fix overflow detection.
+
 2006-12-06  Thorsten Kukuk  <kukuk@thkukuk.de>
 
 	* modules/pam_mkhomedir/pam_mkhomedir.c (rec_mkdir): Fix
